# NumTypes

./: CMakeLists.txt  LLL.cpp  LLL.h  README.md  frac.cpp  frac.h  mathlib.h  pi.cpp  test_LLL.cpp  test_frac.cpp
